String questions finished

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -1166,7 +1166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1179,8 +1179,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter a string:HwerhwAhihetrHahiiuioAhiuHkpoi\n",
-            "List of UpperCase Letters: ['H', 'A', 'H', 'A', 'H']\n"
+            "List of UpperCase Letters: ['H', 'T', 'Y', 'Q', 'R', 'P']\n"
           ]
         }
       ],
@@ -1966,10 +1965,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Most Frequenet word is: word\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Get frequency of each word in dict and then find max of the dict\n",
+        "\n",
+        "# Function - takes string as input and return dictinary of words as key with respective count of occurrence (frequency)\n",
+        "def get_frequency_of_words(string_input:str)-> dict:\n",
+        "    result_dict = {}\n",
+        "    for word in string_input.split(' '):\n",
+        "        # Below code will give default value of the key as 0\n",
+        "        result_dict[word] = result_dict.get(word, 0) + 1\n",
+        "    \n",
+        "    return result_dict\n",
+        "\n",
+        "def get_most_frequent_word(string_inpt:str) -> str:\n",
+        "    frequency_dict = get_frequency_of_words(string_inpt)\n",
+        "    # key of max function is dict.get which return the value of key i.e. count of occurrence\n",
+        "    frequent_word = max(frequency_dict, key=frequency_dict.get)\n",
+        "\n",
+        "    return frequent_word\n",
+        "\n",
+        "# Take string input from user\n",
+        "string_inp = input('Enter string: ')\n",
+        "\n",
+        "# Compute Most Frequent word\n",
+        "frqnt_word = get_most_frequent_word(string_inp)\n",
+        "\n",
+        "# Print Result\n",
+        "print(f'Most Frequenet word is: {frqnt_word}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1981,25 +2015,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Unique words: ['find', 'unique', 'words', 'word', 'let']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - get list of words from string and convert it into set, that give us unique words\n",
+        "\n",
+        "# Take string input from user\n",
+        "string_inp = input('Enter string: ')\n",
+        "\n",
+        "# Compute Unique words\n",
+        "list_of_words = string_inp.split(' ')\n",
+        "set_of_words = set(list_of_words)\n",
+        "unique_words_list = list(set_of_words)\n",
+        "\n",
+        "# Print Result\n",
+        "print(f'Unique words: {unique_words_list}')"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "\n",
-        "### 46. Count the number of syllables in a string."
+        "### 46. Count the number of syllables in a string.\n",
+        "\n",
+        "#### Assumptions:\n",
+        "\n",
+        "> Syllables are sounds of vowels in a word or sentence. It is not count of vowels but sound of vowels.\n",
+        "\n",
+        "> Count of Syllables = count of vowel sounds\n",
+        "\n",
+        "* If two vowels (or more) exists together then they still make one vowel sound together. Will count co-existing vowels as 1.\n",
+        "* Words ending with 'e' does not make a vowel sound at end. For example: try speaking 'notice', 'sentence'. No vowel sound at end, so will not count 'e' at end of each word.\n",
+        "* 'y' makes a vowel sound, so in this problem we will count 'y' as vowel sound.\n",
+        "* If there is no vowel in the word, then it has 1 vowel sound.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of Syllables in given string is: 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Define funtion - take a word as input and gives number of syllables in a word\n",
+        "def count_syllables_in_word(word:str)-> int:\n",
+        "    counter = 0\n",
+        "    # 3rd point in assumptions, considering 'y' as syllable vowel\n",
+        "    syllable_vowels = ['a', 'e', 'i', 'o', 'u', 'y']\n",
+        "\n",
+        "    lowercase_word = word.lower()\n",
+        "\n",
+        "    for i in range(0, len(word)):\n",
+        "        # Check for vowel and also see if letter before is not vowel - point 1 in assumptions\n",
+        "        if(lowercase_word[i] in syllable_vowels and (i == 0 or lowercase_word[i - 1] not in syllable_vowels)):\n",
+        "            counter += 1\n",
+        "    \n",
+        "    # Second point in assumptions last 'e' letter is not counted\n",
+        "    if(lowercase_word[-1] == 'e'):\n",
+        "        counter -= 1\n",
+        "    \n",
+        "    # Fourth point in assumptions\n",
+        "    if counter == 0:\n",
+        "        return 1\n",
+        "    \n",
+        "    return counter\n",
+        "\n",
+        "def count_syllables_in_sentence(sentence:str) -> int:\n",
+        "    # Let us count syllables separately in each word and count is sum of all word's syllables\n",
+        "    list_of_words = sentence.split(' ')\n",
+        "    \n",
+        "    syllables_count = 0\n",
+        "\n",
+        "    for word in list_of_words:\n",
+        "        syllables_count += count_syllables_in_word(word)\n",
+        "\n",
+        "    return syllables_count\n",
+        "\n",
+        "# Take input string from the user\n",
+        "string_inpt = input('Enter your string: ')\n",
+        "\n",
+        "# Count syllables\n",
+        "syllables = count_syllables_in_sentence(string_inpt)\n",
+        "\n",
+        "# print result\n",
+        "print(f'Number of Syllables in given string is: {syllables}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2010,10 +2127,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Contains special character.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Considering special character is not alphabet and neither it is digit or space - we can use inbuilt methods to check each char\n",
+        "# We can alternatively keep a list of all special characters and then for each special char check if that exists.\n",
+        "# We can not use isalnum() method because it return False if string has space in it\n",
+        "# Here using first approach of inbuilt functions\n",
+        "\n",
+        "\n",
+        "# Function - takes string input return boolean (True if contains special character else False)\n",
+        "def contain_special_character(string_inp:str)->bool:\n",
+        "    list_of_chars = list(string_inp)\n",
+        "\n",
+        "    for char in list_of_chars:\n",
+        "        # if char is alphabet or digit or space then check next char\n",
+        "        if(char.isalpha() or char.isdigit() or char == ' '):\n",
+        "            continue\n",
+        "        else:\n",
+        "            return True\n",
+        "    \n",
+        "    return False\n",
+        "\n",
+        "# Take string input from user\n",
+        "string_inpt = input('Enter string: ')\n",
+        "\n",
+        "# Check for special character\n",
+        "contain_spcl_char = contain_special_character(string_inpt)\n",
+        "\n",
+        "# Print Result\n",
+        "if contain_spcl_char:\n",
+        "    print('Contains special character.')\n",
+        "else:\n",
+        "    print('Do not contain special character')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2025,10 +2181,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Robin Pabbi, I am Software Developer and Datascientist\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Convert string to list of words and then remove the element of list from given index\n",
+        "# If we want to take input as position instead of index then index = position - 1 (n - 1, because index starts from 0)\n",
+        "\n",
+        "def remove_word(string_inp:str, indexOfWord: int)-> str:\n",
+        "    list_of_words = string_inp.split(' ')\n",
+        "    list_of_words.pop(indexOfWord)\n",
+        "    return ' '.join(list_of_words)\n",
+        "\n",
+        "# Take string input from user\n",
+        "string_inpt = input('Enter string: ')\n",
+        "\n",
+        "# Take absolute position of the word\n",
+        "position_of_word = int(input(f'Enter position of the word (from 1 to {len(string_inp)}): '))\n",
+        "\n",
+        "# Remove word\n",
+        "# index = position - 1\n",
+        "result_str = remove_word(string_inpt, position_of_word - 1)\n",
+        "\n",
+        "# Print result\n",
+        "print(result_str)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2040,10 +2225,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello Robin Pabbi, I am Software Developer and Datascientist\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Convert string to list of words and then remove the element of list from given index\n",
+        "# If we want to take input as position instead of index then index = position - 1 (n - 1, because index starts from 0)\n",
+        "\n",
+        "def add_word(string_inp:str, indexOfWord: int, word: str)-> str:\n",
+        "    list_of_words = string_inp.split(' ')\n",
+        "    list_of_words.insert(indexOfWord, word)\n",
+        "    return ' '.join(list_of_words)\n",
+        "\n",
+        "# Take string input from user\n",
+        "string_inpt = input('Enter string: ')\n",
+        "\n",
+        "# Take word to be inserted from user\n",
+        "word_to_insert = input('Enter word which you want to insert: ')\n",
+        "\n",
+        "# Take absolute position of the word\n",
+        "position_of_word = int(input(f'Enter position of the word (from 1 to {len(string_inp)}): '))\n",
+        "\n",
+        "# Add word\n",
+        "# index = position - 1\n",
+        "result_str = add_word(string_inpt, position_of_word - 1, word_to_insert)\n",
+        "\n",
+        "# Print result\n",
+        "print(result_str)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2054,9 +2271,50 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 14,
       "metadata": {},
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[['4', '5', '6'], ['7', '8', '9'], ['10', '11', '12'], ['13', '14', '15']]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - First get rows from the string and then split by comma (,) to get values of row\n",
+        "\n",
+        "# Define csv string\n",
+        "csv_string = '''4,5,6\n",
+        "7,8,9\n",
+        "10,11,12\n",
+        "13,14,15'''\n",
+        "\n",
+        "# Function - takes csv string and returns list of list\n",
+        "def convert_csv_to_list(string_csv:str) -> list:\n",
+        "    result = []\n",
+        "    # get list of rows\n",
+        "    list_of_rows = string_csv.splitlines()\n",
+        "    \n",
+        "    for row in list_of_rows:\n",
+        "        # values in row are comma separated and there can be space btw them\n",
+        "        list_of_values = row.split(',')\n",
+        "        # remove spaces (trimming spaces)\n",
+        "        final_list_of_values = [value.strip() for value in list_of_values]\n",
+        "\n",
+        "        # add row to result list\n",
+        "        result.append(final_list_of_values)\n",
+        "    \n",
+        "    return result\n",
+        "\n",
+        "# Convert the csv into list of list\n",
+        "result_list = convert_csv_to_list(csv_string)\n",
+        "\n",
+        "# Print the result\n",
+        "print(result_list)"
+      ]
     },
     {
       "cell_type": "markdown",
