Some questions on list completed

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -3248,10 +3248,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Use Extend to falten the nested list and append to add normal element\n",
+        "\n",
+        "def flatten_list(list_input: list) -> list:\n",
+        "    result = []\n",
+        "    \n",
+        "    for element in list_input:\n",
+        "        if(type(element) is list):\n",
+        "            result.extend(element)\n",
+        "        else:\n",
+        "            result.append(element)\n",
+        "    \n",
+        "    return result\n",
+        "\n",
+        "# Create a nested List\n",
+        "list_wth_nested_list = [[1,2],3, [4,5,6], [7,8,9]]\n",
+        "\n",
+        "# Flattening the list\n",
+        "flat_list = flatten_list(list_wth_nested_list)\n",
+        "\n",
+        "# Print result\n",
+        "print(flat_list)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3262,10 +3292,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Using recurssion\n",
+        "# Fibonacci num formula = F(n) = F(n-2) + F(n-1) - clearly we can use reccurssion here\n",
+        "\n",
+        "def get_fibonacci_number(n:int)-> int:\n",
+        "    # if n = 0 then F = 0, if n = 1 then F = 1\n",
+        "    if n < 2:\n",
+        "        return n\n",
+        "    else:\n",
+        "        return get_fibonacci_number(n-1) + get_fibonacci_number(n-2)\n",
+        "\n",
+        "# Count Fibonacci for 10 numbers (0 to 9)\n",
+        "fibonacci_series = [get_fibonacci_number(num) for num in range(0, 10)]\n",
+        "\n",
+        "# Print fibonacci series\n",
+        "print(fibonacci_series)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3276,10 +3330,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "List 1 sorted : True\n",
+            "List 2 sorted : False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - [1,2,3] == [1,2,3] is False and [1,2,3] == [3,1,2] is False, so we try to sort a list and then compare lists\n",
+        "# using sorted function to sort the list because list.sort is inplace \n",
+        "\n",
+        "def is_sorted(list_to_check: list) -> bool:\n",
+        "    sorted_list = sorted(list_to_check)\n",
+        "    return sorted_list == list_to_check\n",
+        "\n",
+        "# Create a list\n",
+        "list_1 = [1,4,5,7,88,99,100]\n",
+        "list_2 = [1, 2,6,3,99,66,5]\n",
+        "\n",
+        "# Check if list is sorted or not \n",
+        "is_list1_sorted = is_sorted(list_1)\n",
+        "is_list2_sorted = is_sorted(list_2)\n",
+        "\n",
+        "# Print Results\n",
+        "print(f'List 1 sorted : {is_list1_sorted}')\n",
+        "print(f'List 2 sorted : {is_list2_sorted}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3290,10 +3372,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[4, 5, 6, 7, 8, 9, 1, 2, 3]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - will use slicing to achieve left shift by n positions\n",
+        "# By moving lefy we will have items n+1.. till end then 0 to n\n",
+        "\n",
+        "def shift_left(n:int, list_to_shift: list) -> list:\n",
+        "    # Check the number entered is more than length then take the remainder by diving with length (so that no error in slicing)\n",
+        "    # and list is moved with given steps\n",
+        "    normalized_number = n % len(list_to_shift)\n",
+        "    left_shifted_list = list_to_shift[normalized_number:] + list_to_shift[:normalized_number]\n",
+        "    return left_shifted_list\n",
+        "\n",
+        "# Create a list\n",
+        "list_to_shift = [1,2,3,4,5,6,7,8,9]\n",
+        "\n",
+        "# Get the number of positions to be shifted\n",
+        "positions_to_shift = int(input(f'Enter number of positions to shift: '))\n",
+        "\n",
+        "# Shift the list\n",
+        "result_list = shift_left(positions_to_shift, list_to_shift)\n",
+        "\n",
+        "# Print result\n",
+        "print(result_list)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3304,10 +3416,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[7, 8, 9, 1, 2, 3, 4, 5, 6]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - will use slicing to achieve right shift by n positions\n",
+        "# By moving right we will have items from length - n (which is also -n) till end then 0 to -n\n",
+        "\n",
+        "def shift_right(n:int, list_to_shift: list) -> list:\n",
+        "    # Check the number entered is more than length then take the remainder by diving with length (so that no error in slicing)\n",
+        "    # and list is moved with given steps\n",
+        "    normalized_number = (n % len(list_to_shift)*-1)\n",
+        "    right_shifted_list = list_to_shift[(normalized_number):] + list_to_shift[:normalized_number]\n",
+        "    return right_shifted_list\n",
+        "\n",
+        "# Create a list\n",
+        "list_to_shift = [1,2,3,4,5,6,7,8,9]\n",
+        "\n",
+        "# Get the number of positions to be shifted\n",
+        "positions_to_shift = int(input(f'Enter number of positions to shift: '))\n",
+        "\n",
+        "# Shift the list\n",
+        "result_list = shift_right(positions_to_shift, list_to_shift)\n",
+        "\n",
+        "# Print result\n",
+        "print(result_list)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3318,10 +3460,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import math\n",
+        "# Function to check if number is prime or not\n",
+        "# will try to divide a number from 2 to n/2 - (to optimize the function) - if number is divisible by any number the False\n",
+        "def is_prime(n:int) -> bool:\n",
+        "    range_num = math.floor(n/2)\n",
+        "    if(range_num == 2):\n",
+        "        range_num = 3\n",
+        "    for i in range(2 , range_num):\n",
+        "        if(n%i == 0):\n",
+        "            return False\n",
+        "    return True\n",
+        "\n",
+        "# Create a list of prime numbers\n",
+        "prime_numbers = [num for num in range(1, 51) if is_prime(num)]\n",
+        "\n",
+        "# Print result\n",
+        "print(prime_numbers)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3332,10 +3500,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[['Robin', 'Pabbi', 1, 2, 3], [4, 5, 6, 'Helo', 34.5], [67, 'PWskills', 'DataScience', 'AI', 'ML'], ['DL', 'CV', 'NLP']]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - We can use list slicing and step of range function \n",
+        "\n",
+        "# Function definition - Take a chunk size and list as input and return a list of lists with each nested list of given size except last one\n",
+        "# Last nested list might not be necessarily of chunk size, if remaining items are less then size might be shorter\n",
+        "def split_list_into_chunks(chunk_size: int, list_to_split: list) -> list:\n",
+        "    result_list_with_chunks = []\n",
+        "\n",
+        "    list_length = len(list_to_split)\n",
+        "\n",
+        "    # Case of single chunk because chunk size is greater or equal to length of list\n",
+        "    if(chunk_size >= list_length):\n",
+        "        result_list_with_chunks.append(list_to_split)\n",
+        "        return result_list_with_chunks\n",
+        "\n",
+        "    for i in range(0, list_length, chunk_size):\n",
+        "        # Add each chunk of [chunk size] will be added to outer list\n",
+        "        # in case of last chunk, if remaining items are less than chunk size then remaininig items will be added\n",
+        "        result_list_with_chunks.append(list_to_split[i:i+chunk_size])\n",
+        "\n",
+        "    return result_list_with_chunks\n",
+        "\n",
+        "# Create a list\n",
+        "single_list = ['Robin', 'Pabbi', 1,2,3,4,5,6, 'Helo', 34.5, 67, 'PWskills', 'DataScience', 'AI', 'ML', 'DL', 'CV', 'NLP']\n",
+        "\n",
+        "# Take a chunk size input from user\n",
+        "chunk_size = int(input('Enter a chunk size: '))\n",
+        "\n",
+        "# Split list into chunks\n",
+        "list_of_chunks = split_list_into_chunks(chunk_size, single_list)\n",
+        "\n",
+        "# print result\n",
+        "print(list_of_chunks)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3346,10 +3555,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "77\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Sort a list and then we get the second largest at 2nd position if sorted in desc order or second last if sorted in asc order\n",
+        "# We are using Ascending order option\n",
+        "\n",
+        "# Function - takes list as input and return 2nd largest element\n",
+        "def get_second_largest_element(list_input:list):\n",
+        "    sorted_list = sorted(list_input)\n",
+        "    return sorted_list[-2]\n",
+        "\n",
+        "# Create a list\n",
+        "list_to_check = [2,3,4,1,5,6,77,99,34,56]\n",
+        "\n",
+        "# Get 2nd largest number\n",
+        "second_largest_num = get_second_largest_element(list_to_check)\n",
+        "\n",
+        "# Print result\n",
+        "print(second_largest_num)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3360,10 +3594,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Iterate with index and replace with square of value\n",
+        "\n",
+        "# Function - takes a list and replace each element with its square\n",
+        "def replace_elements_with_squares(list_of_numbers: list) -> None:\n",
+        "    for index in range(0, len(list_of_numbers)):\n",
+        "        list_of_numbers[index] **= 2\n",
+        "\n",
+        "# Create a list\n",
+        "list_1 = [1,2,3,4,5,6,7,8,9]\n",
+        "\n",
+        "# Replace with square of element\n",
+        "replace_elements_with_squares(list_1)\n",
+        "\n",
+        "# Print list\n",
+        "print(list_1)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3374,10 +3632,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 0, 2: 1, 33: 2, 415: 3, 76: 4, 79: 5, 28: 6, 19: 7}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Iterate using index, and keep adding each element as key and index as value\n",
+        "\n",
+        "# Function - takes a list as input and return dict (key as elements and value as index)\n",
+        "def get_element_to_index_dict(list_input: list) -> dict:\n",
+        "    element_to_index_dict = {}\n",
+        "\n",
+        "    for index in range(0, len(list_input)):\n",
+        "        element_to_index_dict[list_input[index]] = index\n",
+        "    \n",
+        "    return element_to_index_dict\n",
+        "\n",
+        "# Create a list\n",
+        "list_1 = [1,2,33,415,76,79,28,19]\n",
+        "\n",
+        "# Create a list to dict of element to indices\n",
+        "result = get_element_to_index_dict(list_1)\n",
+        "\n",
+        "# Print dict\n",
+        "print(result)"
+      ]
     },
     {
       "cell_type": "markdown",
